<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.vexelon</groupId>
  <artifactId>mkp.server</artifactId>
  <packaging>war</packaging>
  <version>0.0.1-SNAPSHOT</version>
  <name>mkp.server Maven Webapp</name>
  <url>http://maven.apache.org</url>
  
  <properties>
  	<!-- Adapt this to a version found on http://central.maven.org/maven2/org/eclipse/jetty/jetty-maven-plugin/ -->
  	<jettyVersion>9.1.3.v20140225</jettyVersion>
  	<jdk.version>1.7</jdk.version>
  </properties>
	  
  <dependencies>
    <!-- Unit testing -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
    <!-- OpenNLP -->
	<dependency>
	  <groupId>org.apache.opennlp</groupId>
	  <artifactId>opennlp-tools</artifactId>
	  <version>1.5.3</version>
	</dependency>    
    <!-- Jetty -->
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-webapp</artifactId>
      <version>${jettyVersion}</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-servlets</artifactId>
      <version>${jettyVersion}</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-jsp</artifactId>
      <version>${jettyVersion}</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-util</artifactId>
      <version>${jettyVersion}</version>
    </dependency>
    <!-- Jersey -->
    <dependency>
      <groupId>org.glassfish.jersey.containers</groupId>
      <artifactId>jersey-container-jetty-http</artifactId>
      <version>2.7</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.containers</groupId>
      <artifactId>jersey-container-jetty-servlet</artifactId>
      <version>2.7</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.examples</groupId>
      <artifactId>http-patch</artifactId>
      <version>2.7</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.jaxrs</groupId>
      <artifactId>jackson-jaxrs-json-provider</artifactId>
      <version>2.2.3</version>
    </dependency>
    <dependency>
    	<groupId>org.glassfish.hk2</groupId>
    	<artifactId>guice-bridge</artifactId>
    	<version>2.2.0</version>
    </dependency>
    <!-- Logging
    Use log4j12 instead of simple, because Jetty uses log4j for logging 
    -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.7.6</version>
    </dependency>
    <!-- Tools by Google -->
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.2.4</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>16.0.1</version>
    </dependency>
    <dependency>
      <groupId>com.google.inject.extensions</groupId>
      <artifactId>guice-multibindings</artifactId>
      <version>3.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.inject.extensions</groupId>
      <artifactId>guice-servlet</artifactId>
      <version>3.0</version>
    </dependency>
    <!-- Others -->             
    <dependency>
      <groupId>commons-configuration</groupId>
      <artifactId>commons-configuration</artifactId>
      <version>1.10</version>
    </dependency>
    <dependency>
      <groupId>joda-time</groupId>
      <artifactId>joda-time</artifactId>
      <version>2.3</version>
    </dependency>
                        
  </dependencies>
  
  <build>
    <finalName>mkp.server</finalName>
    
    <pluginManagement>
    <plugins>
        
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.1</version>
        <configuration>
          <source>${jdk.version}</source>
          <target>${jdk.version}</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      
      <plugin>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-maven-plugin</artifactId>
        <version>${jettyVersion}</version>
        <configuration>
          <jvmArgs>-Xmx512m -Xms256m -XX:PermSize=128m -XX:MaxPermSize=512m</jvmArgs>
          <scanIntervalSeconds>5</scanIntervalSeconds>
          <contextXml>${basedir}/src/main/webapp/WEB-INF/jetty-context.xml</contextXml>
          <webApp>
              <contextPath>/</contextPath>
          </webApp>
          <systemPropertiesFile>${basedir}/src/main/resources/server.conf</systemPropertiesFile>
<!--           <systemProperties> -->
<!--             <systemProperty> -->
<!--              <name>log4j.configurationFile</name> -->
<!--              <value>${basedir}/src/main/resources/log4j-app.properties</value> -->
<!--             </systemProperty> -->
<!--            </systemProperties>           -->
        </configuration>
      </plugin>
      
    </plugins>
    </pluginManagement>
        
  </build>
</project>
